* Cria conexão para consumo de dados do servidor * Cria data class * Cria recurso para utilização de coroutines

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">YouTube Clone</string>
+
+    <!-- list_item_video -->
+    <string name="info">%1$s- %2$s views- %3$s</string>
 </resources>
