--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <!-- list_item_video -->
     <string name="info">%1$s- %2$s views- %3$s</string>
+
+    <!-- video_detail -->
+    <string name="time">00:00</string>
 </resources>
